# controller_share

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  license.txt
.cargo/: config.toml
benchmarks/: Cargo.toml
benchmarks/benches/: bench_main.rs
benchmarks/benches/benchmarks/: broker.rs  config_vs_db.rs  ctrl_lib.rs  ctrl_time.rs  et.rs  format.rs  log_cmp.rs  math.rs  messages.rs  mod.rs  schedule.rs  strings.rs  tests.rs  utils.rs
client_web/: index.html  manifest.webmanifest.json
client_web/css/: lag_badge.css  lag_button.css  lag_cenas.css  lag_coisas.css  lag_fonts.css  lag_globals.css  lag_material.css  lag_rega.css  lag_style.css  lag_tempo.css  lag_waiting.css  tri_state_button.css
client_web/errors/: 400.html  401.html  403.html  404.html  405.html  406.html  408.html  409.html  429.html  500.html  502.html  503.html  504.html  511.html
client_web/fonts/: demo.html  stylesheet.css  subset-OpenSans-Bold.eot  subset-OpenSans-BoldItalic.eot  subset-OpenSans-ExtraBold.eot  subset-OpenSans-ExtraBoldItalic.eot  subset-OpenSans-Italic.eot  subset-OpenSans-LightItalic.eot  subset-OpenSans-SemiBold.eot  subset-OpenSans-SemiBoldItalic.eot  subset-Roboto-BlackItalic.eot  subset-Roboto-Thin.eot  subset-Roboto-ThinItalic.eot
client_web/scripts/: ____web.config  lag_app.js  lag_app_consts.js  lag_cycle_detail.js  lag_graph_temp.js  lag_logs.js  lag_logs__mvc.js  lag_main__controller.js  lag_main__view.js  lag_main_view.js  lag_rega__controller.js  lag_rega__history.js  lag_rega__models.js  lag_rega__view.js  lag_rega_cycle_detail.js  lag_rega_sector_detail.js  lag_rega_time_ctrl.js  lag_rega_view.js  lag_sector_detail.js  lag_sensors__mvc.js  lag_sensors_utils.js  lag_setup__mvc.js  lag_ui.js  lag_utils.js  lag_utils_ui.js  lag_weather.js  lag_weather_graph_temp.js  material.js  rega_models.js  time_controller.js
client_web/static/: lag_bd.js  lag_connection.js  lag_controller.js  lag_messages.js  lag_mqtt.js  lag_rega.js  lag_rest_api.js  lag_setup.js  lag_weather.js  lag_web_mqtt.js  material.js  moment.min.js  pt.js  uuid.js
ctrl_lib/: Cargo.toml  rustfmt.toml
ctrl_lib/src/: controller_sync.rs  lib.rs  lib_serde.rs  logger.rs  utils.rs
ctrl_lib/src/app_context/: db_mnt_cfg.rs  mod.rs  start_up.rs
ctrl_lib/src/app_time/: _dev_notes.rs  ctrl_time.rs  date_time.rs  mod.rs  parse_error.rs  schedule.rs  schedule_params.rs  sunrise.rs  tm.rs
ctrl_lib/src/config/: _dev_notes.rs  app_config.rs  db_cfg.rs  geo_pos.rs  log_config.rs  mod.rs  mqtt_config.rs  time_cfg.rs  web_cfg.rs  wss_cfg.rs  wthr_cfg.rs  wtr_cfg.rs
ctrl_lib/src/data_structs/: channel.rs  concurrent_queue.rs  mod.rs  timer_signals.rs
ctrl_lib/src/data_structs/client/: client_context.rs  client_ctx.rs  cycle_cli.rs  cycle_run_cli.rs  db_sync.rs  mod.rs  schedule_cli.rs  sector_cli.rs  sync_op.rs  sync_type.rs
ctrl_lib/src/data_structs/msgs/: alert.rs  alert_thresholds.rs  connection.rs  ext_message.rs  int_message.rs  log_error.rs  mod.rs  topic.rs  weather.rs
ctrl_lib/src/data_structs/rega/: command.rs  internal.rs  mod.rs  mode.rs  running_ptr.rs  state.rs  watering_status.rs  wizard_info.rs
ctrl_lib/src/data_structs/sensor/: daily_value.rs  mod.rs  snsor.rs  stat_metric.rs
ctrl_lib/src/data_structs/sensor/metrics/: evapo_transpiracao.rs  mod.rs
ctrl_lib/src/db/: db_cfg.rs  db_error.rs  db_sql_lite.rs  mod.rs
ctrl_lib/src/services/: clients.rs  mod.rs  web.rs  web_svc.rs
ctrl_lib/src/services/client/: clients_svc.rs  db_model.rs  mod.rs
ctrl_lib/src/services/db_maint/: db_mnt_svc.rs  db_model.rs  mod.rs  svc.rs
ctrl_lib/src/services/electronics/: actuator.rs  db_model.rs  device_gen.rs  device_lawn.rs  devices_and_scenes.rs  devices_svc.rs  error.rs  mod.rs  scene.rs  svc.rs  valve_state.rs
ctrl_lib/src/services/electronics/model/: mod.rs  shelly_structs.rs
ctrl_lib/src/services/irrigation/: cycle.rs  cycle_run.rs  cycle_type.rs  db_model.rs  mod.rs  sector.rs  sector_run.rs  stress_ctrl.rs  system_recover.rs  wtr_engine.rs  wtr_history.rs  wtr_svc.rs  wzrd_algorithms.rs
ctrl_lib/src/services/irrigation/actions/: exec_cmds.rs  mod.rs  start.rs  stop.rs  suspend.rs
ctrl_lib/src/services/irrigation/errors/: cycle.rs  mod.rs  sector.rs
ctrl_lib/src/services/irrigation/states/: error.rs  establish_mode.rs  man_wait.rs  man_wtr_cycle.rs  man_wtr_sector.rs  man_wtr_sector_direct.rs  mod.rs  no_schedule_def.rs  shutdown.rs  starting.rs  std_wait.rs  std_wtr_cycle.rs  std_wtr_sector.rs  wiz_suspended.rs  wiz_wait.rs  wiz_wtr_cycle.rs  wiz_wtr_sector.rs
ctrl_lib/src/services/mqtt/: cache.rs  mod.rs  mqtt_svc.rs  paho.rs  svc.rs
ctrl_lib/src/services/msg_broker/: errors.rs  mod.rs  msg_brkr_svc.rs  subscriber.rs  svc.rs
ctrl_lib/src/services/weather/: algorithms.rs  db_model.rs  history_value.rs  mod.rs  scale.rs  trend.rs  weather_error.rs  weather_history.rs  weather_inner.rs  weather_service.rs  weather_svc.rs
ctrl_lib/src/services/weather/rain_pred/: data_structs.rs  mod.rs  naive_bayes.rs
ctrl_lib/src/services/weather/sources/: mod.rs
ctrl_lib/src/services/weather/sources/simulation/: mock_weather_data.rs  mod.rs  svc.rs
ctrl_lib/src/services/weather/sources/tempest/: data_structs.rs  example1.json  example2.json  mod.rs  rest.rs  station.rs
ctrl_lib/src/thread_signal/: cond_var.rs  mod.rs  raw_event.rs
ctrl_prelude/: Cargo.toml  rustfmt.toml
ctrl_prelude/src/: domain_types.rs  error.rs  globals.rs  lib.rs  string_resources.rs
electronics/: Cargo.toml  rustfmt.toml
electronics/src/: svc.rs
scripts/: 20230122_update.sql  20230301_update.sql  2023MMDD_update.sql  _db_creation.sql  measures.sql  test_config.sql  test_dw.sql  test_electronics.sql  test_watering.sql  test_weather.sql  tst.json
scripts/arquivo/: call_stored_proc.sql  dbsall.sql  maintenance_script01.sql  query02.sql  stored_proc.sql  wateringDB.sql  wateringDB01.sql  wateringDW01.sql
src/: cli_args.rs  control.rs  controller.code-workspace  lib.rs  main.rs  run.rs  signal_handler.rs
src/data/: app_log_config.toml  db.db-shm  db_config.toml  dw.db  dw.db-shm  dw.db-wal  (+5 more)
(+32 files in other folders)
