[package]
name = "benches"
version = "0.1.0"
authors = ["Carlos.Lagarto <carlos.lagarto@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "bench_main"
harness = false

[lib]
bench = false

[dependencies]
criterion = "0.4.0"
# criterion = { git = "https://github.com/bheisler/criterion.rs", branch = "version-0.4"}
chrono = "0.4.22"                                                                        #datas
lazy_static = "1.4.0"
alloc_counter = "0.0.4"
# ufmt = "0.1.0"
itoa = "1.0.3"
lexical = {version = "6.1.1", default-features = false, features = ["write-floats","write-integers", "format"]}
toml = "0.5.9"
serde = { version = "1.0.143", features = ["derive"] }
num_enum = "0.5.7"
string_concat = "0.0.1"
rustc-hash = "1.1.0"
smallvec = {version="1.9.0", features=["serde"]} # mantenho esta versão porque é uma já utilizada por uma lib qualquer na cadeia de compilação
nohash-hasher = "0.2.0"
flexi_logger = { version = "0.23.3", default-features = false, features = ["async", "specfile", ] }
syslog = "6.0.1"
log="0.4.17"

ctrl_lib = { path = "../ctrl_lib", version = "0.1.0"}
ctrl_prelude = { path = "../ctrl_prelude", version = "0.1.0" }

[dev-dependencies]
# flexi_logger = { version = "0.23.3", default-features = false, features = ["async", "specfile", ] }

[dependencies.lexical-core]
version = "0.8.5"
default-features = false
features = ["write-integers", "write-floats"] #, "parse-integers", "parse-floats"]
# controller = {path = "../controller", version = "0.1.0" }

# The benchmarking profile, used for `cargo bench`.
# [profile.bench]
# opt-level = 3
# debug = false
# rpath = false
# # lto =  true
# debug-assertions = false
# codegen-units = 1
# # panic = 'unwind'
